# ZapretInteractive

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  fallow.toml  index.html  justfile  latest-linux.json  package.json  react-doctor.config.json  telemetry-id  tsconfig.json  tsconfig.node.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: bump-version.yml  release.yml  update-lists.yml  verify-thirdparty-hashes.yml
assets/: THEME.md
scripts/: bump.sh  download-linux-modules.js  download_linux_modules.py  release.sh  update-thirdparty.py  verify-thirdparty-hashes.py
src/: index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  default-config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/default-filters/: windivert_part.stun.txt
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin.rs  binaries.rs  config.rs  discord_presence.rs  dns.rs  mod.rs  process.rs  tg_proxy.rs
src/components/: FaultyTerminal.d.ts  FaultyTerminal.jsx  FaultyTerminal.tsx  ThemeSwitcher.tsx  Waves.d.ts  Waves.jsx  Waves.tsx
src/components/features/: AboutPage.tsx  CategoriesListPage.tsx  CategoryPage.tsx  DnsPage.tsx  FiltersPage.tsx  LogsPage.tsx  MainPage.tsx  ModulesPage.tsx  PlaceholdersPage.tsx  SettingsPage.tsx  Sidebar.tsx  TgWsProxyPage.tsx  TitleBar.tsx  module-ui.tsx
src/components/ui/: button.tsx  card.tsx  editor-textarea.tsx  inline-marker.tsx  input.tsx  label.tsx  lenis-scroll-area.tsx  markdown.tsx  scroll-area.tsx  scroll-top-button.tsx  select.tsx  sidebar.tsx  switch.tsx  textarea.tsx  toggle-group.tsx  tooltip.tsx
src/hooks/: use-dns-module.ts  use-module-summary.ts  use-mount-effect.ts  use-tg-ws-proxy-module.ts
src/lib/: connection-flow.ts  discord-presence.ts  dns.ts  editor-scroll.ts  lazy-route.tsx  strategy.ts  system-config.ts  tauri.ts  tg-ws-proxy.ts  types.ts
src/routes/: __root.tsx  about.tsx  dns.tsx  filters.tsx  index.tsx  logs.tsx  modules.tsx  placeholders.tsx  settings.tsx  strategies.$categoryId.tsx  strategies.tsx  tg-ws-proxy.tsx
src/stores/: app.store.ts  autosave-error-reporter.ts  config.store.ts  connection.store.ts  download.store.ts  sidebar.store.ts  theme.store.ts  updater.store.ts
