[package]
name = "zapret-interactive"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zapret_interactive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
overflow-checks = false
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["process", "io-util", "time"] }
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1"
tauri-plugin-devtools = "2.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authentication_Identity", "Win32_System_Threading", "Win32_System_Services"] }
