[package]
name = "zapret-interactive"
version = "1.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "zapret_interactive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
overflow-checks = false
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
dirs = "6.0.0"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
tokio = { version = "1.50.0", features = ["process", "io-util", "time"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
regex = "1.12.3"
tauri-plugin-devtools = "2.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authentication_Identity", "Win32_System_Threading", "Win32_System_Services", "Win32_System_Registry", "Win32_System_Diagnostics_ToolHelp"] }



