[package]
name = "zapret-interactive"
version = "1.3.0"
description = "📦 GUI-wrapper for zapret-win-bundle by bol-van"
authors = ["Noktomezo <noktomezo@duck.com>"]
edition = "2024"

[lib]
name = "zapret_interactive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]

[profile.release]
overflow-checks = false
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
dirs = "6.0.0"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
tokio = { version = "1.50.0", features = ["process", "io-util", "time"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
regex = "1.12.3"
notify = "8.2.0"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-prevent-default = "2"
futures = "0.3.31"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2"
dnsstamps = "0.1.10"
surge-ping = "0.8.4"
toml = "1.1.2"
duct = "1.1.1"
sysinfo = "0.38.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authentication_Identity", "Win32_System_Threading", "Win32_System_Services", "Win32_System_Registry", "Win32_System_Diagnostics_ToolHelp", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }
window-vibrancy = "0.7.1"
